Oct 08, 2018, v.2.1.4
  code refactored: created RnaSeqLoader and ProteinSeqLoader classes, with the common code still residing in SeqLoader class
  ProteinSeqLoader: implemented sequence history: when a reference sequence changes, we keep the old sequence
    with seq_type 'old_ncbi_protein', and add the new sequence with seq_type 'ncbi_protein'

Sep 21, 2018, v.2.1.3
  moved from subversion to github

Aug 28, 2018, v.2.1.2
  rna sequence loader: first release

Aug 8, 2018, v.2.1.1
  protein sequence loader: logging tune up
  optimized sql queries to reduce running time by 20-30%

Aug 7, 2018, v.2.1.0
  protein sequence loader: totally new code, utilizes protein sequence files in fasta format from RefSeq

Aug 2, 2018, v.2.0.0
  initial version of sequence loader for NCBI nucleotide and protein sequences