@@ -19,8 +19,8 @@ dependencies {
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
-    compile 'org.springframework:spring-beans:5.0.9.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.0.9.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.1.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.1.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 	
     compile fileTree(dir: 'lib', include: '*.jar')
